objects/Junction__c/Junction__c.object-meta.xml
<CustomObject>
    <description>A generic object to object junction to be manipulated in code only.</description>
    <label>Junction</label>
    <nameField>
        <displayFormat>J-{000000}</displayFormat>
        <label>Junction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Junctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>