objects/Junction__c/fields/Target_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Type__c</fullName>
    <label>Target Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>